--- a/cssBayan/styles/style.css
+++ b/cssBayan/styles/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: rgb(212, 203, 179);
+  cursor: pointer;
 }
 .wrapper {
   width: 80%;
@@ -15,17 +16,71 @@ body {
   font-weight: bold;
   color: black;
 }
-li {
-  list-style-type: none;
+.wrapper input {
+  display: none;
+}
+
+.item {
+  position: relative;
+}
+
+input:checked + label,
+input:checked + label:hover {
+  background: #c6e1ec;
+  color: #3d7489;
+  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.6);
+  box-shadow: 0px 0px 0px 1px rgba(155, 155, 155, 0.3),
+    0px 2px 2px rgba(0, 0, 0, 0.1);
+}
+.item::after {
+  content: "\002B";
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 1.25rem;
+  height: 1.25rem;
+}
+.item:hover .item::after {
+  display: none;
+  /* content: "\00D7"; */
+  transform: rotate(-180deg);
+}
+
+.item-img {
+  display: none;
+  background-image: url(../images/images.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 0 auto;
+  width: 10rem;
+  height: 10rem;
+  transition: all 2s ease-in-out;
+}
+.item.active:hover .item-img {
+  display: block;
+  transition: all 2s ease-in-out;
+  transform: scale(0.9);
+}
+
+/* .active {
+  background-image: url(../images/images.png);
+  background-size: 100%;
+  background-repeat: no-repeat;
+} */
+.fas.fa-plus:hover {
+  rotate: 45%;
 }
 
 @media (max-width: 820px) {
   body {
     background-color: rgb(196, 179, 212);
+    cursor: none;
   }
 }
 @media (max-width: 320px) {
   body {
     background-color: rgb(179, 212, 203);
+    cursor: none;
   }
 }
