--- a/cssBayan/styles/style.css
+++ b/cssBayan/styles/style.css
@@ -20,19 +20,15 @@ body {
   display: none;
 }
 
-.item {
+.acc {
   position: relative;
 }
 
-input:checked + label,
-input:checked + label:hover {
-  background: #c6e1ec;
-  color: #3d7489;
-  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.6);
-  box-shadow: 0px 0px 0px 1px rgba(155, 155, 155, 0.3),
-    0px 2px 2px rgba(0, 0, 0, 0.1);
+.acc label:hover {
+  background-color: aqua;
 }
-.item::after {
+
+.wrapper:hover .item::after {
   content: "\002B";
   display: block;
   position: absolute;
@@ -41,35 +37,87 @@ input:checked + label:hover {
   width: 1.25rem;
   height: 1.25rem;
 }
-.item:hover .item::after {
-  display: none;
-  /* content: "\00D7"; */
-  transform: rotate(-180deg);
+.acc:hover .item::after {
+  content: "\00D7";
 }
 
-.item-img {
+.item-img-1 {
   display: none;
   background-image: url(../images/images.png);
   background-repeat: no-repeat;
   background-size: contain;
   margin: 0 auto;
-  width: 10rem;
-  height: 10rem;
+  width: 20rem;
+  height: 20rem;
   transition: all 2s ease-in-out;
 }
-.item.active:hover .item-img {
+.acc:hover .item-img-1 {
+  display: block;
+  transition: all 2s ease-in-out;
+  transform: scale(0.9);
+}
+.item-img-2 {
+  display: none;
+  background-image: url(../images/css2.jpeg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 0 auto;
+  width: 20rem;
+  height: 20rem;
+  transition: all 2s ease-in-out;
+}
+.acc:hover .item-img-2 {
   display: block;
   transition: all 2s ease-in-out;
   transform: scale(0.9);
 }
 
-/* .active {
-  background-image: url(../images/images.png);
-  background-size: 100%;
+.item-img-3 {
+  display: none;
+  background-image: url(../images/css3.png);
   background-repeat: no-repeat;
-} */
-.fas.fa-plus:hover {
-  rotate: 45%;
+  background-size: contain;
+  margin: 0 auto;
+  width: 20rem;
+  height: 20rem;
+  transition: all 2s ease-in-out;
+}
+.acc:hover .item-img-3 {
+  display: block;
+  transition: all 2s ease-in-out;
+  transform: scale(0.9);
+}
+
+.item-img-4 {
+  display: none;
+  background-image: url(../images/css4.webp);
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 0 auto;
+  width: 20rem;
+  height: 20rem;
+  transition: all 2s ease-in-out;
+}
+.acc:hover .item-img-4 {
+  display: block;
+  transition: all 2s ease-in-out;
+  transform: scale(0.9);
+}
+
+.item-img-5 {
+  display: none;
+  background-image: url(../images/css5.jpeg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 0 auto;
+  width: 20rem;
+  height: 20rem;
+  transition: all 2s ease-in-out;
+}
+.acc:hover .item-img-5 {
+  display: block;
+  transition: all 2s ease-in-out;
+  transform: scale(0.9);
 }
 
 @media (max-width: 820px) {
@@ -82,5 +130,10 @@ input:checked + label:hover {
   body {
     background-color: rgb(179, 212, 203);
     cursor: none;
+  }
+}
+@media (hover: hover) {
+  body {
+    cursor: pointer;
   }
 }
