--- a/cssBayan/styles/style.css
+++ b/cssBayan/styles/style.css
@@ -12,7 +12,7 @@ body {
 }
 .header {
   padding-top: 5%;
-  font-size: 30px;
+  font-size: 2rem;
   font-weight: bold;
   color: black;
 }
@@ -49,11 +49,12 @@ body {
   margin: 0 auto;
   width: 20rem;
   height: 20rem;
-  transition: all 2s ease-in-out;
+  opacity: 0;
 }
 .acc:hover .item-img-1 {
   display: block;
-  transition: all 2s ease-in-out;
+  transition: all 4s ease-out;
+  opacity: 1;
   transform: scale(0.9);
 }
 .item-img-2 {
@@ -112,12 +113,13 @@ body {
   margin: 0 auto;
   width: 20rem;
   height: 20rem;
-  transition: all 2s ease-in-out;
+  transition: all 4s ease-out;
+  opacity: 0.5;
 }
 .acc:hover .item-img-5 {
   display: block;
-  transition: all 2s ease-in-out;
   transform: scale(0.9);
+  opacity: 1;
 }
 
 @media (max-width: 820px) {
@@ -125,11 +127,27 @@ body {
     background-color: rgb(196, 179, 212);
     cursor: none;
   }
+  .item-img-1,
+  .item-img-2,
+  .item-img-3,
+  .item-img-4,
+  .item-img-5 {
+    width: 15rem;
+    height: 15rem;
+  }
 }
 @media (max-width: 320px) {
   body {
     background-color: rgb(179, 212, 203);
     cursor: none;
+  }
+  .item-img-1,
+  .item-img-2,
+  .item-img-3,
+  .item-img-4,
+  .item-img-5 {
+    width: 10rem;
+    height: 10rem;
   }
 }
 @media (hover: hover) {
