--- a/cssBayan/styles/style.css
+++ b/cssBayan/styles/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: rgb(212, 203, 179);
   cursor: pointer;
+  font-size: 1rem;
 }
 .wrapper {
   width: 80%;
@@ -42,7 +43,7 @@ body {
 }
 
 .item-img-1 {
-  display: none;
+  display: initial;
   background-image: url(../images/images.png);
   background-repeat: no-repeat;
   background-size: contain;
@@ -50,63 +51,66 @@ body {
   width: 20rem;
   height: 20rem;
   opacity: 0;
+  transition: all 3s ease-out;
 }
 .acc:hover .item-img-1 {
   display: block;
-  transition: all 4s ease-out;
   opacity: 1;
   transform: scale(0.9);
 }
 .item-img-2 {
-  display: none;
+  display: initial;
   background-image: url(../images/css2.jpeg);
   background-repeat: no-repeat;
   background-size: contain;
   margin: 0 auto;
   width: 20rem;
   height: 20rem;
+  opacity: 0;
   transition: all 2s ease-in-out;
 }
 .acc:hover .item-img-2 {
   display: block;
-  transition: all 2s ease-in-out;
+  opacity: 1;
   transform: scale(0.9);
 }
 
 .item-img-3 {
-  display: none;
+  display: initial;
   background-image: url(../images/css3.png);
   background-repeat: no-repeat;
   background-size: contain;
   margin: 0 auto;
   width: 20rem;
   height: 20rem;
+  opacity: 0;
   transition: all 2s ease-in-out;
 }
 .acc:hover .item-img-3 {
   display: block;
-  transition: all 2s ease-in-out;
+  opacity: 1;
   transform: scale(0.9);
 }
 
 .item-img-4 {
-  display: none;
+  display: initial;
   background-image: url(../images/css4.webp);
   background-repeat: no-repeat;
   background-size: contain;
   margin: 0 auto;
   width: 20rem;
   height: 20rem;
+  opacity: 0;
   transition: all 2s ease-in-out;
 }
 .acc:hover .item-img-4 {
   display: block;
-  transition: all 2s ease-in-out;
+  opacity: 1;
   transform: scale(0.9);
 }
 
 .item-img-5 {
-  display: none;
+  display: initial;
   background-image: url(../images/css5.jpeg);
   background-repeat: no-repeat;
   background-size: contain;
@@ -114,7 +118,7 @@ body {
   width: 20rem;
   height: 20rem;
   transition: all 4s ease-out;
-  opacity: 0.5;
+  opacity: 0;
 }
 .acc:hover .item-img-5 {
   display: block;
@@ -125,6 +129,7 @@ body {
 @media (max-width: 820px) {
   body {
     background-color: rgb(196, 179, 212);
+    font-size: 0.8rem;
     cursor: none;
   }
   .item-img-1,
